@@ -118,7 +118,7 @@ public class HMAC {
      * @throws Exception
      */
     public static byte[] decryptBase64(String key) throws Exception {
-        return (new BASE64Decoder()).decodeBuffer(key);
+        return java.util.Base64.getDecoder().decode((key));
     }
 
     /**
